--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi Web con Gemini API</title>
+  <title>Mi Web con Y3</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Chat con Gemini</h1>
+  <h1>Chat con Y3</h1>
   <textarea id="prompt" placeholder="Escribe tu pregunta..."></textarea>
   <button id="enviar">Enviar</button>
   <pre id="respuesta"></pre>
