--- a/index.html
+++ b/index.html
@@ -2,15 +2,42 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi Web con Y3</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Chat con Llama.cpp</title>
+  <style>
+    body { font-family: Arial, sans-serif; background: #f4f4f4; padding: 20px; }
+    #chat { width: 100%; height: 300px; border: 1px solid #ccc; padding: 10px; overflow-y: auto; background: #fff; }
+    #msg { width: 80%; padding: 10px; }
+    button { padding: 10px; }
+    .yo { color: blue; margin: 5px 0; }
+    .bot { color: green; margin: 5px 0; }
+  </style>
 </head>
 <body>
-  <h1>Chat con Y3</h1>
-  <textarea id="prompt" placeholder="Escribe tu pregunta..."></textarea>
-  <button id="enviar">Enviar</button>
-  <pre id="respuesta"></pre>
+  <h2>💬 Chat con Llama.cpp (local)</h2>
+  <div id="chat"></div>
+  <input id="msg" type="text" placeholder="Escribe un mensaje">
+  <button onclick="send()">Enviar</button>
 
-  <script type="module" src="script.js"></script>
+  <script>
+    async function send() {
+      const msg = document.getElementById("msg").value;
+      if (!msg) return;
+
+      const chat = document.getElementById("chat");
+      chat.innerHTML += `<div class="yo"><b>Tú:</b> ${msg}</div>`;
+
+      // enviar al servidor local
+      const res = await fetch("http://localhost:8080/completion", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ prompt: msg, n_predict: 50 })
+      });
+
+      const data = await res.json();
+      chat.innerHTML += `<div class="bot"><b>Llama:</b> ${data.content}</div>`;
+      document.getElementById("msg").value = "";
+      chat.scrollTop = chat.scrollHeight;
+    }
+  </script>
 </body>
 </html>
