--- a/index.html
+++ b/index.html
@@ -2,41 +2,56 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Chat con Llama.cpp</title>
+  <title>Chat con Y3.cpp</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f4f4f4; padding: 20px; }
-    #chat { width: 100%; height: 300px; border: 1px solid #ccc; padding: 10px; overflow-y: auto; background: #fff; }
-    #msg { width: 80%; padding: 10px; }
-    button { padding: 10px; }
-    .yo { color: blue; margin: 5px 0; }
-    .bot { color: green; margin: 5px 0; }
+    #chat { background: white; padding: 10px; border-radius: 10px; max-width: 600px; margin: auto; }
+    .msg { margin: 10px 0; }
+    .user { font-weight: bold; color: blue; }
+    .bot { font-weight: bold; color: green; }
+    input, button { padding: 10px; margin-top: 10px; width: 100%; }
   </style>
 </head>
 <body>
-  <h2>💬 Chat con Llama.cpp (local)</h2>
+  <h2 style="text-align:center">Chat con tu modelo Y3.cpp 🚀</h2>
   <div id="chat"></div>
-  <input id="msg" type="text" placeholder="Escribe un mensaje">
-  <button onclick="send()">Enviar</button>
+  <input id="userInput" type="text" placeholder="Escribe un mensaje..." />
+  <button onclick="sendMessage()">Enviar</button>
 
   <script>
-    async function send() {
-      const msg = document.getElementById("msg").value;
-      if (!msg) return;
+    const chatDiv = document.getElementById("chat");
+    const input = document.getElementById("userInput");
+    const API_URL = "https://elite-hey-physician-disc.trycloudflare.com/completion";
 
-      const chat = document.getElementById("chat");
-      chat.innerHTML += `<div class="yo"><b>Tú:</b> ${msg}</div>`;
+    async function sendMessage() {
+      const text = input.value.trim();
+      if (!text) return;
+      addMessage("user", text);
+      input.value = "";
 
-      // enviar al servidor local
-      const res = await fetch("http://localhost:8080/completion", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ prompt: msg, n_predict: 50 })
-      });
+      try {
+        const response = await fetch(API_URL, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            prompt: text,
+            n_predict: 100
+          })
+        });
 
-      const data = await res.json();
-      chat.innerHTML += `<div class="bot"><b>Llama:</b> ${data.content}</div>`;
-      document.getElementById("msg").value = "";
-      chat.scrollTop = chat.scrollHeight;
+        const data = await response.json();
+        addMessage("bot", data.content || "Error al generar respuesta.");
+      } catch (err) {
+        addMessage("bot", "⚠️ Error: " + err.message);
+      }
+    }
+
+    function addMessage(sender, text) {
+      const msg = document.createElement("div");
+      msg.classList.add("msg");
+      msg.innerHTML = `<span class="${sender}">${sender === "user" ? "Tú" : "Bot"}:</span> ${text}`;
+      chatDiv.appendChild(msg);
+      chatDiv.scrollTop = chatDiv.scrollHeight;
     }
   </script>
 </body>
